remove unnecessary code (#4191)
Signed-off-by: moonyoungCHAE <xpf_fl@naver.com>